packages/error/test/helpers/throw-inherited-error.ts
import { InheritedError } from './inherited-error';

export const throwInheritedError = () => {
  throw new InheritedError('message', 'code');
};
